fix: dossier js dans 1-bases

--- a/1-bases/2-chaines.html
+++ b/1-bases/2-chaines.html
@@ -30,6 +30,6 @@
     <footer>
       <h4>Cours Javascript</h4>
     </footer>
-    <script src="../js/2-chaines.js"></script>
+    <script src="js/2-chaines.js"></script>
   </body>
 </html>
