--- a/1-bases/3-tableaux.html
+++ b/1-bases/3-tableaux.html
@@ -28,6 +28,6 @@
     <footer>
       <h4>Cours Javascript</h4>
     </footer>
-    <script src="../js/3-tableaux.js"></script>
+    <script src="js/3-tableaux.js"></script>
   </body>
 </html>
