--- a/1-bases/4-operateurs.html
+++ b/1-bases/4-operateurs.html
@@ -40,6 +40,6 @@
     <footer>
       <h4>Cours Javascript</h4>
     </footer>
-    <script src="../js/4-operateurs.js"></script>
+    <script src="js/4-operateurs.js"></script>
   </body>
 </html>
